; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/diff/src/extr_diff3.c_readnum.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/diff/src/extr_diff3.c_readnum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i32*)* @readnum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @readnum(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8, align 1
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = load i8, i8* %8, align 1
  store i8 %9, i8* %6, align 1
  store i32 0, i32* %7, align 4
  %10 = load i8, i8* %6, align 1
  %11 = call i64 @ISDIGIT(i8 zeroext %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %33

14:                                               ; preds = %2
  br label %15

15:                                               ; preds = %25, %14
  %16 = load i8, i8* %6, align 1
  %17 = zext i8 %16 to i32
  %18 = sub nsw i32 %17, 48
  %19 = load i32, i32* %7, align 4
  %20 = mul nsw i32 %19, 10
  %21 = add nsw i32 %18, %20
  store i32 %21, i32* %7, align 4
  %22 = load i8*, i8** %4, align 8
  %23 = getelementptr inbounds i8, i8* %22, i32 1
  store i8* %23, i8** %4, align 8
  %24 = load i8, i8* %23, align 1
  store i8 %24, i8* %6, align 1
  br label %25

25:                                               ; preds = %15
  %26 = load i8, i8* %6, align 1
  %27 = call i64 @ISDIGIT(i8 zeroext %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %15, label %29

29:                                               ; preds = %25
  %30 = load i32, i32* %7, align 4
  %31 = load i32*, i32** %5, align 8
  store i32 %30, i32* %31, align 4
  %32 = load i8*, i8** %4, align 8
  store i8* %32, i8** %3, align 8
  br label %33

33:                                               ; preds = %29, %13
  %34 = load i8*, i8** %3, align 8
  ret i8* %34
}

declare dso_local i64 @ISDIGIT(i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
